# PraisonAI-Tools

./: .gitignore  README.md  TEST_GUIDE.md  dependencies.txt  example.py  financial-analysis.html  pyproject.toml  test.txt  test_integration.py  test_standalone.py  tmpc8_hvm6m.html
.github/scripts/: ci-failure-claude-selftest.js  ci-failure-claude.js  gate-config.js  merge-gate-selftest.js  merge-gate.js  pipeline-status-selftest.js  pipeline-status.js  pr-review-chain.js  release-gate-selftest.js  release-gate.js
.github/workflows/: auto-issue-comment.yml  auto-pr-comment.yml  chain-claude-after-copilot.yml  ci-failure-claude.yml  ci.yml  claude-merge-gate.yml  claude.yml  generate-docs.yml  nightly-release-gate.yml  pypi-release.yml  python-package.yml  python-publish.yml  sync-secrets-from-praisonai.yml
docs/: inkog_security_integration.md  joy_trust_integration.md  n8n_integration.md  nexus_prediction_market_integration.md  swarmscore_integration.md  video-cli.md  video-module.md
examples/: inkog_security_example.py  jira_watch_example.py  joy_trust_integration.py  langextract_example.py  motion_graphics_example.py  motion_graphics_team.yaml  n8n_integration_example.py  nexus_prediction_market_example.py  swarmscore_example.py
examples/video/: example_edit.py  example_probe.py
praisonai_tools/: __init__.py  cli.py
praisonai_tools/adapters/: embedchain_adapter.py  lancedb_adapter.py
praisonai_tools/docs_generator/: README.md  __init__.py  __main__.py  generate_rust_docs.py  generator.py  rust_parser.py
praisonai_tools/fcp_tool/: __init__.py  cli.py  commandpost.py  doctor.py  fcpxml.py  injector.py  intent.py  prompting.py
praisonai_tools/marketplace/: __init__.py  agentfolio.py  agentid.py  decorator.py  joy_trust.py  pinchwork.py
praisonai_tools/n8n/: __init__.py  n8n_workflow.py
praisonai_tools/observability/: __init__.py  base.py  bridge.py  cli.py  config.py  manager.py
praisonai_tools/observability/providers/: __init__.py  agentops_provider.py  arize_phoenix_provider.py  atla_provider.py  braintrust_provider.py  datadog_provider.py  langdb_provider.py  langfuse_provider.py  langsmith_provider.py  langtrace_provider.py  langwatch_provider.py  maxim_provider.py  mlflow_provider.py  neatlogs_provider.py  openlit_provider.py  opik_provider.py  patronus_provider.py  portkey_provider.py  traceloop_provider.py  truefoundry_provider.py  weave_provider.py
praisonai_tools/recipe_tools/: __init__.py  archive_tool.py  base.py  chart_tool.py  data_tool.py  doc_tool.py  email_tool.py  image_tool.py  llm_tool.py  media_tool.py  repo_tool.py  vision_tool.py  web_tool.py  whisper_tool.py
praisonai_tools/recipe_tools/tests/: __init__.py  conftest.py  test_archive_tool.py  test_data_tool.py  test_llm_tool.py  test_media_tool.py  test_repo_tool.py
praisonai_tools/tools/: __init__.py  _discovery.py  agentfolio_tool.py  agentid_tool.py  agentql_tool.py  airflow_tool.py  apify_tool.py  arxiv_tool.py  aws_lambda_tool.py  aws_ses_tool.py  baidu_search_tool.py  base.py  bigquery_tool.py  bitbucket_tool.py  brandfetch_tool.py  brave_search_tool.py  brightdata_tool.py  browserbase_tool.py  calcom_tool.py  calculator_tool.py  calculator_tools.py  capsule_tool.py  cartesia_tool.py  cassandra_tool.py  chroma_tool.py  clickhouse_tool.py  clickup_tool.py  composio_tool.py  confluence_tool.py  couchbase_tool.py  crawl4ai_tool.py  crowpay_tool.py  csv_tool.py  csv_tools.py  daytona_tool.py  decorator.py  discord_tool.py  docker_tool.py  duckdb_tool.py  duckdb_tools.py  (+119 more)
praisonai_tools/tools/browserbase_load_tool/: README.md  browserbase_load_tool.py
praisonai_tools/tools/code_docs_search_tool/: README.md
praisonai_tools/tools/csv_search_tool/: README.md
praisonai_tools/tools/directory_read_tool/: README.md
praisonai_tools/tools/directory_search_tool/: README.md
praisonai_tools/tools/docx_search_tool/: README.md
praisonai_tools/video/: __init__.py  __main__.py  pipeline.py  plan.py  probe.py  render.py  transcribe.py
scripts/: generate-reference-docs.py  generate-sdk-docs.py  generate_reference_docs.py
scripts/templates/: class.mdx.jinja2  module.mdx.jinja2
scripts/tests/: __init__.py  test_mdx_escaping.py
tests/: __init__.py  base_tool_test.py  conftest.py  run_tests.py  test_base.py  test_channel_tools.py  test_exa.py  test_inkog_tool.py  test_langextract_tool.py  test_marketplace_agentic.py  test_marketplace_agentic_agentfolio.py  test_marketplace_tools.py  test_mdx_escaping.py  test_n8n_integration.py  test_nexus_prediction_market_tool.py  test_observability_auto_instrumentation.py  test_observability_both_patterns.py  test_swarmscore_tool.py  test_tavily.py  test_tool_discovery.py  test_tools.py  test_youdotcom.py
tests/data/: embedding.txt
tests/fcp_tool/: __init__.py  test_doctor.py  test_fcpxml.py  test_intent.py
tests/integration/: test_jira_agent.py  test_jira_kanban_real.py  test_motion_graphics_team.py
tests/smoke/: test_motion_graphics_smoke.py
tests/unit/: test_jira_kanban.py
(+50 files in other folders)
