[project]
name = "PraisonAI-Tools"
version = "0.0.9"
description = "Set of tools for the PraisonAI framework"
authors = [
    {name = "Mervin Praison"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "pydantic>=2.6.1,<3.0.0",
    "langchain>=0.1.4,<0.2.0",
    "pytest>=8.0.0,<9.0.0",
    "lancedb>=0.5.4,<0.6.0",
    "openai>=1.12.0,<2.0.0",
    "embedchain[github,youtube]>=0.1.85,<0.2.0",
    "chromadb>=0.4.22,<0.5.0",
    "pyright>=1.1.350,<2.0.0",
    "pytube>=15.0.0,<16.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "selenium>=4.18.1,<5.0.0",
    "docx2txt>=0.8,<0.9",
    "crewai-tools>=0.3.0,<0.4.0",
]

[project.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI-tools"

# Poetry configuration
[tool.poetry]
name = "PraisonAI-Tools"
version = "0.0.8"
description = "Set of tools for the PraisonAI framework"
authors = ["Mervin Praison"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
pydantic = "^2.6.1"
langchain = ">=0.1.4,<0.2.0"
pytest = "^8.0.0"
lancedb = "^0.5.4"
openai = "^1.12.0"
embedchain = {extras = ["github", "youtube"], version = "^0.1.85"}
chromadb = "^0.4.22"
pyright = "^1.1.350"
pytube = "^15.0.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.18.1"
docx2txt = "^0.8"
crewai-tools = "^0.3.0"

[tool.poetry.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI-tools"

[build-system]
requires = ["hatchling", "poetry-core>=1.0.0"]
build-backend = "hatchling.build"