[project]
name = "PraisonAI-Tools"
version = "0.0.22"
description = "Set of tools for the PraisonAI framework"
authors = [
    {name = "Mervin Praison"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.13.2"
dependencies = [
    "pydantic>=2.6.1,<=2.10.1",
    "langchain>=0.3.25,<0.4.0",
    "pytest>=8.3.5,<9.0.0",
    "lancedb>=0.22.0,<0.25.0",
    "openai>=1.75.0,<2.0.0",
    "chromadb>=0.5.10,<0.6.0",
    "pyright>=1.1.400,<2.0.0",
    "pytube>=15.0.0,<16.0.0",
    "requests>=2.32.3,<3.0.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "selenium>=4.32.0,<5.0.0",
    "docx2txt>=0.8,<0.9",
    "docker>=7.1.0,<8.0.0",
    "click>=8.2.0,<9.0.0",
]

[project.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI-tools"

# Poetry configuration
[tool.poetry]
name = "PraisonAI-Tools"
version = "0.0.22"
description = "Set of tools for the PraisonAI framework"
authors = ["Mervin Praison"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13.2"
pydantic = "^2.6.1"
langchain = ">=0.3.25,<0.4.0"
pytest = "^8.3.5"
lancedb = "^0.22.0"
openai = "^1.75.0"
chromadb = ">=0.5.10,<0.6.0"
pyright = "^1.1.400"
pytube = "^15.0.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.13.4"
selenium = "^4.32.0"
docx2txt = "^0.8"
docker = "^7.1.0"
click = "^8.2.0"

[tool.poetry.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/mervinpraison/PraisonAI-tools"

[build-system]
requires = ["hatchling>=1.0.0", "poetry-core>=1.0.0"]
build-backend = "hatchling.build"