[project]
name = "praisonai-tools"
version = "0.1.0"
description = "A comprehensive toolkit for AI agents - search, extraction, and content tools"
authors = [
    {name = "Mervin Praison", email = "mervin@praison.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agents", "tools", "search", "tavily", "exa", "youdotcom", "praisonai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
tavily = ["tavily-python>=0.5.0"]
exa = ["exa-py>=1.0.0"]
youdotcom = ["youdotcom>=0.1.0"]
all = [
    "tavily-python>=0.5.0",
    "exa-py>=1.0.0",
    "youdotcom>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://docs.praison.ai"
Repository = "https://github.com/MervinPraison/PraisonAI-Tools"
Documentation = "https://docs.praison.ai/tools"
Issues = "https://github.com/MervinPraison/PraisonAI-Tools/issues"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["praisonai_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "tavily: tests requiring TAVILY_API_KEY",
    "exa: tests requiring EXA_API_KEY",
    "youdotcom: tests requiring YDC_API_KEY",
]